@@ -161,6 +161,13 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   image_rotated_l                  "Your image has been rotated 90° anticlockwise."
   image_flipped_h                  "Your image has been flipped horizontally."
   image_flipped_v                  "Your image has been flipped vertically."
+  one_media_stolen_and_opened      "Media $id has been stolen from $victim and opened for edit."
+  one_media_yours_and_opened       "Media $id was already checked out to you; it has been opened for edit."
+  all_selected_media_yours         "The selected Media were all checked out to you; switching to Workspace view."
+  multiple_media_yours             "Media $ids were already checked out to you."
+  one_media_yours                  "Media $id was already checked out to you."
+  multiple_media_stolen            "Media $ids have been stolen (from $victims) and moved to your Workspace."
+  one_media_stolen                 "Media $id has been stolen from $victim and moved to your Workspace."
 </Module>
 
 <Module "Krang::CGI::Media::BulkUpload">
